<resources>
    <string name="app_name">PayBhama</string>
    <string name="app_name_backspace_t">PayBhama\t</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_setting">Settings</string>
    <string name="title_add_money">Add Money</string>
    <string-array name="business">
        <item>hardware</item>
        <item>food and accommodation</item>
        <item>cloths</item>
        <item>stationary</item>
        <item>medical</item>
        <item>entertainment</item>
        <item>automobile</item>
        <item>grocery</item>
    </string-array>
    <string name="money_send_hindi_1">आपके द्वारा दिए गए अकाउंट नंबर पर</string>
    <string name="money_send_hindi_2">रूपए जमा हो गए है </string>
    <string name="mobile_number_hindi">मोबाइल नंबर</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="password_hindi">पासवर्ड </string>
    <string name="login">Login</string>
    <string name="login_hindi">लॉगिन </string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_hindi">पासवर्ड भूल गए ? </string>
    <string name="change_password_hindi">पासवर्ड बदले </string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_hindi">नए उपभोगता</string>
    <string name="know_more_hindi">अधिक जाने</string>
    <string name="show_password">Show Password</string>
    <string name="show_password_hindi">पासवर्ड देखे</string>
    <string name="know_more">Know More</string>
    <string name="dashboard_hindi">मुख्यपेज</string>
    <string name="setting_hindi">सेटिंग</string>
    <string name="notification_hindi">अधिसूचना</string>
    <string name="history_hindi">इतिहास</string>
    <string name="history_hindi_english">हिस्ट्री</string>
    <string name="add_money_hindi">पैसे जोड़े </string>
    <string name="family_number">family number</string>
    <string name="family_number_hindi">परिवार पहचान संख्या</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="aadhar_number_hindi">आधार संख्या </string>
    <string name="account_number">Account Number</string>
    <string name="account_number_hindi">खाता संख्या </string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="ifsc_code_hindi">IFSC कोड </string>
    <string name="email">E-mail</string>
    <string name="email_hindi">इ-मेल </string>
    <string name="next">Next</string>
    <string name="next_hindi">अगला </string>
    <string name="otp">One Time Password</string>
    <string name="otp_hindi">एक प्रयोग पासवर्ड </string>
    <string name="otp_text_view_hindi">कृपया अपने नंबर पर भेजे गया OTP डाले </string>
    <string name="submit">Submit</string>
    <string name="submit_hindi">जमा करें</string>
    <string name="first_name">First Name</string>
    <string name="first_name_hindi">प्रथम नाम </string>
    <string name="please_wait">Please Wait</string>
    <string name="please_wait_hindi">कृपया प्रतिक्षया करे </string>
    <string name="last_name">Last Name</string>
    <string name="last_name_hindi">अंतिम नाम </string>
    <string name="gender">Gender </string>
    <string name="gender_hindi">लिंग </string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="male_hindi">पुरुष </string>
    <string name="female_hindi">स्त्री </string>
    <string name="address">Address</string>
    <string name="address_hindi">पता </string>
    <string name="new_password_hindi">नया पासवर्ड </string>
    <string name="last_four_digit">Last four digit</string>
    <string name="last_four_digit_hindi">अंतिम चार अंक </string>
    <string name="first_four_digit">First four digit</string>
    <string name="first_four_digit_hindi">प्रथम चार अंक </string>
    <string name="details_hindi">आपके भामाशाह कार्ड  की जानकारी निम्न है </string>
    <string name="first_four_digit_of_your_account_number">अकाउंट नंबर के  प्रथम चार अंक </string>
    <string name="last_four_digit_of_your_account_number">अकाउंट नंबर के  अंतिम  चार अंक </string>
    <string name="last_four_digit_of_your_aadhar_number">आधार  नंबर के  अंतिम  चार अंक  </string>
    <string name="first_four_digit_of_your_aadhar_number">आधार  नंबर के  प्रथम  चार अंक </string>
    <string name="name">नाम</string>
    <string name="dob">जन्म दिनांक</string>
    <string name="location">पता</string>
</resources>