<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_add_money"
        android:icon="@drawable/ic_credit_card_black_48dp"
        android:title="@string/add_money_hindi" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history_black_48dp"
        android:title="@string/history_hindi_english" />


    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_settings_black_48dp"
        android:title="@string/setting_hindi" />

</menu>
